portfolio item added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,17 @@
             <img src="img\RecruitLink1.png" alt="logoMockUp">
         </div>
 
-
+        <!--Third Portfolio Item-->
+        <div class="portfolio-item-text3">
+            <h2>Web Design</h2>
+            <hr class="portfolio-line">
+            <h4>Custom | Landing Pages | Multi-page</h4>
+            <p><br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, necessitatibus.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, obcaecati.</p>
+        </div>
+        <div class="portfolio-item-text3right">
+            <img src="img\LogoIndia.jpg" alt="logoMockUp">
+        </div>
 
 
     </div>
