--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, obcaecati.</p>
         </div>
         <div class="portfolio-item-text3right">
-            <img src="img\LogoIndia.jpg" alt="logoMockUp">
+            <img src="img\webMockUp1.png" alt="logoMockUp">
         </div>
 
 
