--- a/index.html
+++ b/index.html
@@ -74,13 +74,38 @@
             <hr class="portfolio-line">
             <h4>Custom | Landing Pages | Multi-page</h4>
             <p><br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, necessitatibus.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, obcaecati.</p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, obcaecati.</p>
         </div>
         <div class="portfolio-item-text3right">
             <img src="img\webMockUp1.png" alt="logoMockUp">
         </div>
+    </div>
 
+    <div class="contact">
+        <div class="contact-header">
+            <h2>Contact</h2>
+        </div>
+        <div class="contact-form">
+            <form method="POST" action="https://formsubmit.co/ivan@refinddesign.co.za">
 
+                <div class="fields">
+                    <div class="field half">
+                        <input type="hidden" name="_subject" value="Form Submission from Website">
+                        <input type="hidden" name="_next" value="https://refinddesign.co.za">
+                        <input label for="Name" type="text" name="name" id="name" placeholder="Name" required />
+                    </div>
+                    <div class="field half">
+                        <input type="email" name="email" id="email" placeholder="Email" required />
+                    </div>
+                    <div class="field">
+                        <textarea name="message" id="message" placeholder="Message" required></textarea>
+                    </div>
+                </div>
+                <ul class="actions">
+                    <li><input type="submit" value="Send" class="primary" /></li>
+                </ul>
+            </form>
+        </div>
     </div>
 
 
