name and email aligned horizontally

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
             <form method="POST" action="https://formsubmit.co/ivan@refinddesign.co.za">
 
                 <div class="fields">
-                    <div class="field half">
+                    <div class="name-text">
                         <input type="hidden" name="_subject" value="Form Submission from Website">
                         <input type="hidden" name="_next" value="https://refinddesign.co.za">
                         <input label for="Name" type="text" name="name" id="name" placeholder="Name" required />
                     </div>
-                    <div class="field half">
+                    <div class="email-text">
                         <input type="email" name="email" id="email" placeholder="Email" required />
                     </div>
                     <div class="field">
