form elements styled

--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
         </div>
         <div class="contact-form">
             <form method="POST" action="https://formsubmit.co/ivan@refinddesign.co.za">
-
                 <div class="fields">
                     <div class="name-text">
                         <input type="hidden" name="_subject" value="Form Submission from Website">
@@ -97,7 +96,7 @@
                     <div class="email-text">
                         <input type="email" name="email" id="email" placeholder="Email" required />
                     </div>
-                    <div class="field">
+                    <div class="message-text">
                         <textarea name="message" id="message" placeholder="Message" required></textarea>
                     </div>
                 </div>
