smooth scrolling added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p>Let us know what your design needs is. Whether it is a redesign of an
                     existing brand, a new logo or a custom website.</p> -->
 
-            <a href="#" class="services-button">Contact Me</a>
+            <a href="#contactSection" class="services-button">Contact Me</a>
         </div>
 
 
@@ -81,7 +81,7 @@
         </div>
     </div>
 
-    <div class="contact">
+    <div class="contact" id="contactSection">
         <div class="contact-header">
             <h2>Contact</h2>
         </div>
