--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 
     <div class="contact" id="contactSection">
         <div class="contact-header">
-            <h2>Contact</h2>
         </div>
         <div class="contact-form">
+            <h2>Contact | Request a Quote</h2>
             <form method="POST" action="https://formsubmit.co/ivan@refinddesign.co.za">
                 <div class="fields">
                     <div class="name-text">
