contact section resized

--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
         </div>
     </div>
 
+
+<!-------------Contact Section------------>
     <div class="contact" id="contactSection">
         <div class="contact-header">
         </div>
         <div class="contact-form">
-            <h2>Contact | Request a Quote</h2>
+            <h2>Contact Me / Request a Quote</h2>
             <form method="POST" action="https://formsubmit.co/ivan@refinddesign.co.za">
                 <div class="fields">
                     <div class="name-text">
