responsiveness added to text in portfolio section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
 
 
-<!-------------Contact Section------------>
+    <!-------------Contact Section------------>
     <div class="contact" id="contactSection">
         <div class="contact-header">
         </div>
@@ -109,6 +109,10 @@
         </div>
     </div>
 
+    <!-------------Footer Section------------>
+    <div class="footer">
+
+    </div>
 
 </body>
 
