--- a/index.html
+++ b/index.html
@@ -109,11 +109,24 @@
         </div>
     </div>
 
-    <!-------------Footer Section------------>
+    <!-----------Footer Section---------->
     <div class="footer">
-
+        <div class="footer-text">
+            <h3>REFIND</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis delectus, veritatis architecto quia
+                iste, maxime corrupti possimus iusto excepturi impedit sint error placeat asperiores deserunt itaque
+                alias consectetur saepe modi iure fugiat officiis, dolores voluptas ipsum. Corporis tempore nesciunt
+                sint?</p>
+            <p>RefindDesign&copy;2022</p>
+        </div>
+        <div class="social-icons">
+            <ion-icon name="logo-instagram"></ion-icon>
+        </div>
     </div>
 
 </body>
+
+
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 
 </html>
