working on navigation and header

--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
 <body>
 
     <div class="header-text">
-        <div class="content">
+        <!-- <div class="content">
             <div class="logo1"><img src="img\FullLogo_White_Colour1.png" alt="GraphicDesign"></div>
             <p>Transform your Brand.</p>
+        </div> -->
+        <div class="navigation">
+            <div class="logo1"><img src="img\FullLogo_White_Colour1.png" alt="GraphicDesign">
+            <p>Transform your Brand.</p></div>
+            <ul>
+                <li>Portfolio</li>
+                <li>Contact</li>
+                <li>About</li>
+            </ul>
         </div>
         <a href="#" class="scroll-down"></a>
     </div>
@@ -113,11 +122,11 @@
     <div class="footer">
         <div class="footer-text">
             <h3>REFIND</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis delectus, veritatis architecto quia
+            <p><br />Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis delectus, veritatis architecto quia
                 iste, maxime corrupti possimus iusto excepturi impedit sint error placeat asperiores deserunt itaque
                 alias consectetur saepe modi iure fugiat officiis, dolores voluptas ipsum. Corporis tempore nesciunt
                 sint?</p>
-            <p>RefindDesign&copy;2022</p>
+            <p><br />RefindDesign&copy;2022</p>
         </div>
         <div class="social-icons">
             <ion-icon name="logo-instagram"></ion-icon>
